Added tabs + products tab Made a huge mess... Especially the CSS needs to be revised

--- a/main.html
+++ b/main.html
@@ -7,17 +7,19 @@
     <script src="vendor/jquery-2.2.1.min.js"></script>
     <script src="vendor/jquery-ui.min.js"></script>
     <script src="vendor/jquery.hotkeys.js"></script>
-    <link rel="stylesheet" href="vendor/jquery-ui.css">
 </head>
 <body>
+  <div id="tabs" style="display:none;">
+  <ul>
 
+  </ul>
+  </div>
     <div id="loader">
         <div class="loadingbar"></div>
         <div class="loadingbar"></div>
         <div class="loadingbar"></div>
     </div>
 
-    <div id="table"></div>
     <button id="addItemButton">+</button>
     <div id="addItemDialog">
       <div id="mainInputs">
