Now using SASS in place of plain CSS

--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Pecuniary Evolution</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/main.css">
     <!-- Vendor libraries -->
     <script src="vendor/jquery-2.2.1.min.js"></script>
     <script src="vendor/jquery-ui.min.js"></script>
