Changed from jQuery Hotkeys to keypress.js http://dmauro.github.io/Keypress/

--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
     <!-- Vendor libraries -->
     <script src="vendor/jquery-2.2.1.min.js"></script>
     <script src="vendor/jquery-ui.min.js"></script>
-    <script src="vendor/jquery.hotkeys.js"></script>
+    <script src="vendor/keypress.js"></script>
 </head>
 <body>
   <div id="tabs" style="display:none;">
